# senoquant

./: .coveragerc  .gitignore  404.html  AGENTS.md  CITATION.cff  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  ufish.pth
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: build-stardist-ext.yml  docs.yml  macos-installer.yml  publish-pypi.yml  publish-stardist-ext.yml  tests.yml  windows-installer.yml
_vendor/ufish/ufish/utils/: log.py
api/: index.html
developer/adding-tabs/: index.html
developer/architecture/: index.html
developer/batch-profiles/: index.html
developer/contributing/: index.html
developer/installation/: index.html
developer/installer/: index.html
developer/models/: index.html
developer/packaging/: index.html
developer/prediction/: index.html
developer/quantification-features/: index.html
developer/repo-map/: index.html
developer/stardist-onnx/: index.html
developer/visualization/: index.html
docs/: index.md
docs/api/: index.md
docs/developer/: adding-tabs.md  api.md  architecture.md  batch-profiles.md  contributing.md  installation.md  installer.md  marker-cross-references.md  models.md  packaging.md  prediction.md  quantification-features.md  repo-map.md  stardist-onnx.md  visualization.md
docs/user/: batch.md  data.md  installation.md  prediction.md  quantification.md  quickstart.md  segmentation.md  settings.md  spots.md  visualization.md
installer/macos/: README.md  build_macos_installer.sh  environment.macos.yml  launch_senoquant.sh  post_install.sh
installer/windows/: build_windows_installer.ps1  environment.windows.gpu.yml  launch_senoquant.bat  launch_senoquant.ps1  post_install.ps1  senoquant.iss
search/: search_index.json
src/senoquant/: __init__.py  _reader.py  _widget.py  napari.yaml  utils.py
src/senoquant/reader/: core.py
src/senoquant/tabs/: __init__.py
src/senoquant/tabs/batch/: __init__.py  backend.py  config.py  frontend.py  io.py  layers.py
src/senoquant/tabs/prediction/: __init__.py  backend.py  frontend.py
src/senoquant/tabs/prediction/models/: __init__.py  base.py
src/senoquant/tabs/prediction/models/demo_model/: model.py
src/senoquant/tabs/quantification/: backend.py  config.py  frontend.py
src/senoquant/tabs/quantification/features/: __init__.py  base.py  roi.py
src/senoquant/tabs/quantification/features/colocalization/: __init__.py  config.py  export.py  feature.py
src/senoquant/tabs/quantification/features/marker/: config.py  dialog.py  export.py  feature.py  morphology.py  rows.py
src/senoquant/tabs/quantification/features/spots/: config.py  dialog.py  export.py  feature.py  morphology.py  rows.py
src/senoquant/tabs/quantify/: __init__.py  backend.py  frontend.py
src/senoquant/tabs/segmentation/: backend.py  frontend.py
src/senoquant/tabs/segmentation/_frontend/: __init__.py  run_mixin.py  settings_mixin.py  tab.py  ui_mixin.py  widgets.py
src/senoquant/tabs/segmentation/models/: __init__.py  base.py  model.py
src/senoquant/tabs/segmentation/models/cpsam/: details.json  model.py
src/senoquant/tabs/segmentation/models/cyto_only/: details.json  model.py
src/senoquant/tabs/segmentation/stardist_onnx_utils/: model_runtime.py  model_runtime_mixin.py
src/senoquant/tabs/settings/: backend.py  frontend.py
src/senoquant/tabs/spots/: backend.py  frontend.py
src/senoquant/tabs/spots/models/: __init__.py  base.py  denoise.py
src/senoquant/tabs/spots/models/rmp/: details.json  (+1 more)
src/senoquant/tabs/spots/ufish_utils/: __init__.py  core.py
src/senoquant/tabs/visualization/: __init__.py  backend.py  frontend.py
src/senoquant/tabs/visualization/plots/: __init__.py  base.py  double_expression.py  spatialplot.py  test_backend.py  umap.py
src/senoquant/utils/: __init__.py  model_details.schema.json  model_details_schema.py  setting_tooltips.py  settings_bundle.py  settings_bundle.schema.json  utils.py
stardist_ext/: CMakeLists.txt  README.md  pyproject.toml
tests/: conftest.py
tests/senoquant/: __init__.py  test_model_details_schema.py  test_setting_tooltips.py  test_settings_bundle.py  test_utils.py
tests/senoquant/reader/: test_core.py  test_core_more.py  test_scene_selection.py
tests/senoquant/tabs/: __init__.py  test_ui_smoke.py
tests/senoquant/tabs/batch/: test_batch_backend.py  test_config.py  test_frontend_cyto_modes.py  test_frontend_preview_metadata.py  test_frontend_settings.py  test_io.py  test_io_more.py  test_layers.py  test_spot_size_filter.py
tests/senoquant/tabs/prediction/: test_backend.py  test_frontend.py
tests/senoquant/tabs/quantification/: test_backend_more.py  test_quant_backend.py
tests/senoquant/tabs/quantification/features/: test_marker_export.py  test_marker_export_more.py  test_marker_feature_ui.py  test_marker_helpers.py  test_registry.py  test_spots_export.py  test_spots_export_more.py  test_spots_feature_ui.py  test_spots_helpers.py  test_thresholding.py
tests/senoquant/tabs/segmentation/: test_frontend_layer_filtering.py  test_perinuclear_rings.py  test_segmentation_backend.py
tests/senoquant/tabs/segmentation/models/: test_cpsam.py  test_cyto_only.py  test_nuclear_dilation.py  test_segmentation_base.py  test_stardist.py
tests/senoquant/tabs/settings/: __init__.py  test_backend.py  test_frontend.py
tests/senoquant/tabs/spots/: __init__.py  test_frontend_ufish.py  test_size_filter.py  test_spots_backend.py  test_spots_backend_more.py  test_ufish_utils.py
tests/senoquant/tabs/spots/models/: test_denoise.py  test_rmp.py  test_spots_base.py  test_udwt.py  test_ufish.py
tests/senoquant/tabs/visualization/: __init__.py  test_backend.py
tests/senoquant/tabs/visualization/plots/: __init__.py  test_handlers.py  test_integration.py  test_registry_and_base.py
user/batch/: index.html
user/data/: index.html
user/installation/: index.html
user/prediction/: index.html
user/quantification/: index.html
user/quickstart/: index.html
user/segmentation/: index.html
user/settings/: index.html
user/spots/: index.html
user/visualization/: index.html
(+50 files in other folders)
