[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senoquant"
version = "0.1.0"
description = "SenoQuant: a napari plugin scaffold using qtpy"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Your Name" }]
classifiers = [
  "Framework :: napari",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
]

dependencies = [
  # "napari",
  "napari-bioio-reader",
]

[project.entry-points."napari.manifest"]
senoquant = "senoquant:napari.yaml"

[project.optional-dependencies]
all = ["napari[all]", "napari-bioio-reader"]

[tool.setuptools.package-data]
senoquant = ["napari.yaml"]
