[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senoquant"
version = "0.1.0"
description = "SenoQuant is a versatile Napari plugin designed for comprehensive, accurate, and unbiased spatial quantification and prediction of senescence markers across diverse tissue contexts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Your Name" }]
classifiers = [
  "Framework :: napari",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
]

dependencies = [
  # "napari",
  "bioio>=3.2.0",
  "bioio-czi>=2.4.2",
  "bioio-dv>=1.2.0",
  "bioio-imageio>=1.3.0",
  "bioio-lif>=1.4.0",
  "bioio-nd2>=1.6.0",
  "bioio-ome-tiff>=1.4.0",
  "bioio-ome-zarr>=3.2.1",
  "bioio-sldy>=1.4.0",
  "bioio-tifffile>=1.3.0",
  "bioio-tiff-glob>=1.2.0",
  "numpy>=1.23,<=1.26.4",
  "cellpose==4.0.8",
  "onnx>=1.16",
  "onnxruntime>=1.16; platform_system == 'Darwin'",
  "onnxruntime-gpu>=1.16; platform_system != 'Darwin'",
  "openpyxl>=3.1",
  "scikit-image>=0.22,<0.25",
  "scipy>=1.8",
  "senoquant-stardist-ext>=0.1.0",
]

[project.entry-points."napari.manifest"]
senoquant = "senoquant:napari.yaml"

[project.optional-dependencies]
distributed = ["dask[array]>=2024.4", "dask[distributed]>=2024.4"]
gpu = ["cupy-cuda12x>=12.0", "cucim>=23.4"]
all = [
  "napari[all]",
  "bioio>=3.2.0",
  "bioio-czi>=2.4.2",
  "bioio-dv>=1.2.0",
  "bioio-imageio>=1.3.0",
  "bioio-lif>=1.4.0",
  "bioio-nd2>=1.6.0",
  "bioio-ome-tiff>=1.4.0",
  "bioio-ome-zarr>=3.2.1",
  "bioio-sldy>=1.4.0",
  "bioio-tifffile>=1.3.0",
  "bioio-tiff-glob>=1.2.0",
  "numpy>=1.23,<=1.26.4",
  "cellpose==4.0.8",
  "onnx>=1.16",
  "onnxruntime>=1.16; platform_system == 'Darwin'",
  "onnxruntime-gpu>=1.16; platform_system != 'Darwin'",
  "openpyxl>=3.1",
  "scikit-image>=0.22,<0.25",
  "scipy>=1.8",
  "senoquant-stardist-ext>=0.1.0",
  "dask[array]>=2024.4",
  "dask[distributed]>=2024.4",
  "cupy-cuda12x>=12.0",
  "cucim>=23.4",
]

[tool.setuptools.package-data]
senoquant = ["napari.yaml"]
