[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senoquant"
version = "1.0.0b2"
description = "Napari plugin for spatial quantification of senescence markers in tissue imaging"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "SenoQuant Contributors" },
]
maintainers = [
  { name = "SenoQuant Contributors" },
]
keywords = [
  "napari",
  "plugin",
  "senescence",
  "quantification",
  "microscopy",
  "image analysis",
  "segmentation",
  "spot detection",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: napari",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
  # "napari",
  "bioio>=3.2.0",
  "bioio-czi>=2.4.2",
  "bioio-dv>=1.2.0",
  "bioio-imageio>=1.3.0",
  "bioio-lif>=1.4.0",
  "bioio-nd2>=1.6.0",
  "bioio-ome-tiff>=1.4.0",
  "bioio-ome-zarr>=3.2.1",
  "bioio-sldy>=1.4.0",
  "bioio-tifffile>=1.3.0",
  "bioio-tiff-glob>=1.2.0",
  "numpy>=1.23,<=1.26.4",
  "cellpose==4.0.8",
  "onnx>=1.16",
  "onnxruntime>=1.21.0; platform_system == 'Darwin'",
  "onnxruntime-gpu>=1.21.0; platform_system != 'Darwin'",
  "openpyxl>=3.1",
  "huggingface_hub>=0.23.0",
  "scikit-image>=0.22,<0.25",
  "scipy>=1.8",
  "senoquant-stardist-ext>=0.1.0",
  "dask[array]>=2024.4",
  "dask[distributed]>=2024.4",
  "ufish==0.1.1",
]

[project.urls]
Homepage = "https://github.com/HaamsRee/senoquant-dev"
Documentation = "https://haamsree.github.io/senoquant-dev/"
Repository = "https://github.com/HaamsRee/senoquant-dev"
"Bug Tracker" = "https://github.com/HaamsRee/senoquant-dev/issues"

[project.entry-points."napari.manifest"]
senoquant = "senoquant:napari.yaml"

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=12.0", "cucim>=23.4"]
all = [
  "napari[all]",
  "bioio>=3.2.0",
  "bioio-czi>=2.4.2",
  "bioio-dv>=1.2.0",
  "bioio-imageio>=1.3.0",
  "bioio-lif>=1.4.0",
  "bioio-nd2>=1.6.0",
  "bioio-ome-tiff>=1.4.0",
  "bioio-ome-zarr>=3.2.1",
  "bioio-sldy>=1.4.0",
  "bioio-tifffile>=1.3.0",
  "bioio-tiff-glob>=1.2.0",
  "numpy>=1.23,<=1.26.4",
  "cellpose==4.0.8",
  "onnx>=1.16",
  "onnxruntime>=1.21.0; platform_system == 'Darwin'",
  "onnxruntime-gpu>=1.21.0; platform_system != 'Darwin'",
  "openpyxl>=3.1",
  "huggingface_hub>=0.23.0",
  "scikit-image>=0.22,<0.25",
  "scipy>=1.8",
  "senoquant-stardist-ext>=0.1.0",
  "dask[array]>=2024.4",
  "dask[distributed]>=2024.4",
  "ufish==0.1.1",
  "cupy-cuda12x>=12.0",
  "cucim>=23.4",
]

[tool.setuptools.package-data]
senoquant = [
  "napari.yaml",
  "tabs/segmentation/models/*/details.json",
  "tabs/segmentation/models/*/model.py",
  "tabs/spots/models/*/details.json",
  "tabs/spots/models/*/model.py",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__/*", ".DS_Store"]
